# The-Void-Game

./: CMakeLists.txt  README.md
header/: Button.h  GameObject.h  Interactable.h  InteractionManager.h  InventoryManager.h  StoryBeats.h  TextField.h  TextboxManager.h  insideHouseScreen.h  outsideScreen.h  startScreen.h
headers/: GameObject.h  Interactable.h  InteractionManager.h
resources/: room.xcf
src/: Button.cpp  GameObject.cpp  Interactable.cpp  InteractionManager.cpp  InventoryManager.cpp  ScreenManager.cpp  StoryBeats.cpp  StoryBeats.h  TextField.cpp  TextField.h  TextboxManager.cpp  insideHouseScreen.cpp  insideHouseScreen.h  main.cpp  outsideScreen.cpp  startScreen.cpp  startScreen.h  title-screen.cpp  titleScreen.cpp  titleScreen.h
